--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,22 @@ jobs:
       - store_artifacts:
           path: ~/artifacts
           destination: node-build
+  build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/install-packages
+      - run:
+          command: npm run test
+  build-and-e2e:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/install-packages
+      - run:
+          command: npm run test:e2e    
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
@@ -49,12 +65,18 @@ jobs:
           name: deploy
           command: '#e.g. ./deploy.sh'
 workflows:
-  build-and-test:
+  workflow-test:
     jobs:
       - test-node
       - build-node:
           requires:
             - test-node
+  build-and-test:
+    jobs:
+      - build-and-test  
+  build-and-e2e:
+    jobs:
+      - build-and-e2e 
     # - deploy:
     #     requires:
     #       - build-node
