--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./src/typeorm.config.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "npm run typeorm:run-migrations && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,7 +20,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./src/typeorm.config.ts",
     "typeorm:generate-migration": "npm run typeorm -- -d ./src/typeorm.config.ts migration:generate ./src/migrations/$npm_config_name",
     "typeorm:create-migration": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
     "typeorm:revert-migration": "npm run typeorm -- -d ./src/typeorm.config.ts migration:revert"
